[B]3.6.2[/B]
Update author name

[B]3.6.1[/B]
Fixed: Won't scrape MBID randomly

[B]3.6.0[/B]
Changed: Language is now a selection list

[B]3.5.0[/B]
Added: Scraping Styles and Moods from TheAudioDb.com

[B]3.4.2[/B]
Updated language files from Transifex

[B]3.4.1[/B]
Updated language files from Transifex

[B]3.4.0[/B]
Added: 2 new languages
Removed: last.fm completely

[B]3.3.0[/B]
Added: Restore scraping from HTBackdrops.com using their new domain htbackdrops.org

[B]3.2.0[/B]
Added: An attempt to handle dash and exclamation mark in the artist name

[B]3.1.0[/B]
Added: Polish for theaudiodb.com language selection
Removed: htbackdrops.com scraping since site is dead for a good while
Fixed: allmusic.com scraping

[B]3.0.0[/B]
Added: ResolveIDToUrl

[B]2.6.5[/B]
Updated language files from Transifex

[B]2.6.4[/B]
Changed: tighten search query and trust musicbrainz results sorting

[B]2.6.3[/B]
Fixed: AMGData

[B]2.6.2[/B]
Added: option to fall back on artist life span from TheAudioDb.com

[B]2.6.1[/B]
Disable last.fm options because last.fm is now truncating biogs

[B]2.6.0[/B]
Added: option to fetch discography and artist life span from TheAudioDb.com

[B]2.5.0[/B]
Added: option to select language from TheAudioDB.com
Added back the option to scrape from last.fm

[B]2.4.3[/B]
Disable last.fm options because last.fm suspended XBMC's API account

[B]2.4.2[/B]
Updated language files from Transifex

[B]2.4.1[/B]
Updated language files from Transifex

[B]2.4.0[/B]
Re-enable fanart.tv scraping by default

[B]2.3.0[/B]
Added: Scraping artist thumbs and fanarts from theaudiodb.com

[B]2.2.0[/B]
Added back fanart.tv scraping via JSON API. Still off by default.

[B]2.1.9[/B]
Temporarily disable fanarttv.com scraping due to site load issues

[B]2.1.8[/B]
Fixed: Scraper now works with both API layouts

[B]2.1.7[/B]
Added: Chinese translation

[B]2.1.6[/B]
Fixed: MusicBrainz reverted back previous API layout changes so scraper needs to be reverted too

[B]2.1.5[/B]