@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.artists.universal"
        name="Universal Artist Scraper"
-       version="3.6.2"
+       version="3.7.0"
        provider-name="Olympia, Team Kodi">
   <requires>
     <import addon="xbmc.metadata" version="2.1.0"/>
     <import addon="metadata.common.allmusic.com" version="3.1.0"/>
     <import addon="metadata.common.fanart.tv" version="3.1.0"/>
     <import addon="metadata.common.htbackdrops.com" version="1.3.2"/>
-    <import addon="metadata.common.musicbrainz.org" version="2.0.2"/>
+    <import addon="metadata.common.musicbrainz.org" version="2.1.0"/>
     <import addon="metadata.common.theaudiodb.com" version="1.8.1"/>
   </requires>
   <extension point="xbmc.metadata.scraper.artists"
