@@ -36,5 +36,9 @@
     <setting label="30023" type="bool" id="tadbfanart" default="true"/>
     <setting label="30000" type="bool" id="htbfanart" default="true"/>
   </category>
+  
+  <category label="30025">
+      <setting label="30026" type="text" id="mbsite" default="http://musicbrainz.org"/>
+  </category>
 
 </settings>
