@@ -1,3 +1,6 @@
+[B]3.7.0[/B]
+Added: ability to define MusicBrainz mirror
+
 [B]3.6.2[/B]
 Update author name
 
